--- a/Notebooks/PropertiesSU2FluidProp.ipynb
+++ b/Notebooks/PropertiesSU2FluidProp.ipynb
@@ -3414,25 +3414,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    from scipy.optimize import fmin_slsqp\n"
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n"
    ]
   },
   {
